# ledger-lens-sync

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-entrypoint.sh  kind-cluster.yaml  main.py  pyproject.toml  requirements.txt
.claude/command/: crud.instruction.md
app/: database.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  security.py  service.py
data/: ledger_lens.db
docs/: DB_Tables.sql  architecture.drawio  architecture.mmd  aws_s3_storage_setup.md  drop_not_null.sql  finalcial_results.json  integrated_results.json  puppeteer-config.json  rag-api.json  sync-service-notes.md
ledger-lens-sync-chart/: Chart.yaml  values.yaml
ledger-lens-sync-chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
ledger-lens-sync-chart/templates/tests/: test-connection.yaml
nse_data_storage/: __init__.py  aws_file_storage.py  local_file_storage.py  storage.py
nse_web_source/: __init__.py  announcement.py  annual_report.py  common.py  data_channel.py  financial_results.py  integrated_results.py
