[project]
name = "ledger-lens-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "python-dotenv>=1.0",
    "pydantic[email]>=2.0",
    "pandas-stubs~=3.0.3",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "bcrypt>=5.0.0",
]
